# mlops-zoomcamp

./: .flake8  .gitignore  .isort.cfg  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt
.githooks/: commit-msg  pre-push
01-intro/: homework.ipynb
02-experiment-tracking/: homework.ipynb  homework.md
02-experiment-tracking/homework/: hpo.py  preprocess_data.py  register_model.py  train.py
02-experiment-tracking/materials/homework/: hpo.py
02-experiment-tracking/output/: README.md
02-experiment-tracking/taxi_data_folder/: README.md
03-orchestration/: homework.md
