[tool.poetry]
name = "mlops-zoomcamp"
version = "0.1.0"
description = ""
authors = ["FiLM <keerathap@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.4"
numpy = "^1.26.4"
pandas = "^2.2.2"
seaborn = "^0.13.2"
matplotlib = "^3.9.0"
pydantic = "^2.7.1"
mlflow = "^2.13.0"
scikit-learn = "^1.4"
jupyter = "^1.0.0"
hyperopt = "^0.2.7"
xgboost = "^2.0.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
isort = "^5.12.0"
black = {extras = ["jupyter"], version = "^23.7.0"}
pylint = "^2.17.5"
codecov = "^2.1.13"
pytest-cov = "^4.1.0"
pytest-html = "^3.2.0"
mypy = "^1.5.1"
flake8-docstrings = "^1.7.0"
darglint = "^1.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
